# lab-bridge

./: .gitignore  README.md  Taskfile.yml  config.example.yaml
.github/workflows/: siteapp-publish.yml
compose/: Caddyfile.tmpl  chisel-users.json.tmpl  docker-compose.yml.tmpl
compose/loki/: config.yaml.tmpl
compose/siteapp/: .dockerignore  .gitignore  Dockerfile  README.md  agent_upload_token.example  build.sh  pyproject.toml
compose/siteapp/app/: admin.py  agent.py  api.py  config.py  docs.py  main.py  markdown.py  nav.py  paths.py  templates.py  translations.py
compose/siteapp/app/default_docs/: index.md  index.ru.md  system-overview.md  system-overview.ru.md  technical-overview.md  technical-overview.ru.md
compose/siteapp/app/static/: copy-code.js  mermaid-init.js  site.css
compose/siteapp/app/templates/: _lang_toggle.html  _nav.html  agent.html  base.html  doc.html
compose/siteapp/app/templates/admin/: agent.html  base.html  docs.html  index.html
compose/siteapp/tests/: conftest.py  test_config.py  test_main.py  test_markdown.py  test_nav.py  test_paths.py  test_routes_admin.py  test_routes_agent.py  test_routes_api.py  test_routes_docs.py  test_translations.py
scripts/: deploy.sh  doctor.sh  ops.sh  provision.sh  secrets.sh
scripts/lib/: common.sh  (+3 more)
tests/: helpers.bash  test_common.bats  test_config.bats  test_crypto.bats  test_deploy.bats  test_grafana_provisioning.bats  test_ops.bats  test_provision.bats  test_render.bats  test_secrets.bats  test_siteapp_auth.bats  test_siteapp_routing.bats  test_siteapp_safety.bats  test_siteapp_uploads.bats
(+19 files in other folders)
